Updated website for paper and data set

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -1,1 +1,5 @@
-
+week: Monday, 5 November
+  title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
+  author: Jeremy Gunawardena
+  journal: BMC Biology
+  year: 2014
