Fixed a broken YAML file

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -1,4 +1,4 @@
-week: Monday, 5 November
+- Monday, 5 November:
   title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
   author: Jeremy Gunawardena
   journal: BMC Biology
