--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -1,5 +1,4 @@
-- Monday, 5 November:
-  title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
+- title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
   author: Jeremy Gunawardena
   journal: BMC Biology
   year: 2014
