Added link to gunawardena paper

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -2,3 +2,4 @@
   author: Jeremy Gunawardena
   journal: BMC Biology
   year: 2014
+  link: "https://bmcbiol.biomedcentral.com/articles/10.1186/1741-7007-12-29"
