Added link to stouthammer paper

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -3,3 +3,9 @@
   journal: BMC Biology
   year: 2014
   link: "https://bmcbiol.biomedcentral.com/articles/10.1186/1741-7007-12-29"
+
+- title: "A theoretical study on the amount of ATP required for synthesis of microbial cell material"
+  author: A.H. Stouthamer 
+  journal: "Antonie van Leewenhoek"
+  year: 1973
+  link: "https://mcb.berkeley.edu/labs/garcia/sites/mcb.berkeley.edu.labs.garcia/files/Teaching/2017-MCB137/Stouthamer1973.pdf"
