Added Brangwynne paper

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -9,3 +9,9 @@
   journal: "Antonie van Leewenhoek"
   year: 1973
   link: "https://mcb.berkeley.edu/labs/garcia/sites/mcb.berkeley.edu.labs.garcia/files/Teaching/2017-MCB137/Stouthamer1973.pdf"
+
+- title: "A nuclear F-actin scaffold stabilizes RNP droplets against gravity in large cells"
+  author: Marina Feric and Clifford Brangwynne
+  year: 2013
+  journal: Nature Cell Biology
+  link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3789854/pdf/nihms508745.pdf
