Added mermin talk PDF

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -10,6 +10,11 @@
   year: 1973
   link: "https://mcb.berkeley.edu/labs/garcia/sites/mcb.berkeley.edu.labs.garcia/files/Teaching/2017-MCB137/Stouthamer1973.pdf"
 
+- title: "What I'd Like To Know About 2105" 
+  author: David Mermin 
+  year: 2005 
+  link: "http://www.lassp.cornell.edu/mermin/talk1.pdf"
+
 - title: "A nuclear F-actin scaffold stabilizes RNP droplets against gravity in large cells"
   author: Marina Feric and Clifford Brangwynne
   year: 2013
