Progress on constitutive promoter tutorial and added a paper

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -20,3 +20,8 @@
   year: 2013
   journal: Nature Cell Biology
   link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3789854/pdf/nihms508745.pdf
+
+- title: "A Mathematician's Lament"
+  author: Paul Lockhart
+  year:  2009
+  link: "https://www.maa.org/external_archive/devlin/LockhartsLament.pdf"
