first modifications of website under my control

--- a/_data/members.yaml
+++ b/_data/members.yaml
@@ -3,7 +3,7 @@
   image: rob.jpg
   email: phillips
 
-- name: Griffin Chure
+- name: Manuel Razo
   title: TA
-  image: gchure.jpg
-  email: gchure
+  image: manuel.jpg
+  email: mrazomejj
