comment current readings

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -1,27 +1,27 @@
-- title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
-  author: Jeremy Gunawardena
-  journal: BMC Biology
-  year: 2014
-  link: "https://bmcbiol.biomedcentral.com/articles/10.1186/1741-7007-12-29"
-
-- title: "A theoretical study on the amount of ATP required for synthesis of microbial cell material"
-  author: A.H. Stouthamer 
-  journal: "Antonie van Leewenhoek"
-  year: 1973
-  link: "https://mcb.berkeley.edu/labs/garcia/sites/mcb.berkeley.edu.labs.garcia/files/Teaching/2017-MCB137/Stouthamer1973.pdf"
-
-- title: "What I'd Like To Know About 2105" 
-  author: David Mermin 
-  year: 2005 
-  link: "http://www.lassp.cornell.edu/mermin/talk1.pdf"
-
-- title: "A nuclear F-actin scaffold stabilizes RNP droplets against gravity in large cells"
-  author: Marina Feric and Clifford Brangwynne
-  year: 2013
-  journal: Nature Cell Biology
-  link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3789854/pdf/nihms508745.pdf
-
-- title: "A Mathematician's Lament"
-  author: Paul Lockhart
-  year:  2009
-  link: "https://www.maa.org/external_archive/devlin/LockhartsLament.pdf"
+# - title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
+#   author: Jeremy Gunawardena
+#   journal: BMC Biology
+#   year: 2014
+#   link: "https://bmcbiol.biomedcentral.com/articles/10.1186/1741-7007-12-29"
+#
+# - title: "A theoretical study on the amount of ATP required for synthesis of microbial cell material"
+#   author: A.H. Stouthamer
+#   journal: "Antonie van Leewenhoek"
+#   year: 1973
+#   link: "https://mcb.berkeley.edu/labs/garcia/sites/mcb.berkeley.edu.labs.garcia/files/Teaching/2017-MCB137/Stouthamer1973.pdf"
+#
+# - title: "What I'd Like To Know About 2105"
+#   author: David Mermin
+#   year: 2005
+#   link: "http://www.lassp.cornell.edu/mermin/talk1.pdf"
+#
+# - title: "A nuclear F-actin scaffold stabilizes RNP droplets against gravity in large cells"
+#   author: Marina Feric and Clifford Brangwynne
+#   year: 2013
+#   journal: Nature Cell Biology
+#   link: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3789854/pdf/nihms508745.pdf
+#
+# - title: "A Mathematician's Lament"
+#   author: Paul Lockhart
+#   year:  2009
+#   link: "https://www.maa.org/external_archive/devlin/LockhartsLament.pdf"
