add PNAS 2018 biomass paper

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -1,3 +1,10 @@
+- title: "The biomass distribution on Earth"
+  author: Yinon M. Bar-On, Rob Phillips, and Ron Milo
+  journal: PNAS
+  year: 2018
+  description: This paper examines the distribution of biomass on planet Earth, challenging many of our preconceptions about biological numeracy.
+  link: "http://rpdata.caltech.edu/publications/Bar-On_2018.pdf"
+
 # - title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
 #   author: Jeremy Gunawardena
 #   journal: BMC Biology
