add Jeremy's paper

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -45,6 +45,15 @@
   year: 1998
   link: "https://www.cell.com/abstract/S0092-8674(00)80923-X"
 
+- title: "Models in biology: ‘accurate descriptions of our pathetic thinking’"
+  author: Jeremy Gunawardena
+  journal: BMC Biology
+  description: This incredible opinion piece by Jereme Gunawardena discusses the role that models play in science.
+  year: 2014
+  link: "https://bmcbiol.biomedcentral.com/articles/10.1186/1741-7007-12-29"
+
+
+
 # - title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
 #   author: Jeremy Gunawardena
 #   journal: BMC Biology
