upload chicken gut folding paper

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -57,6 +57,15 @@
   year:  2009
   link: "https://www.maa.org/external_archive/devlin/LockhartsLament.pdf"
 
+
+- title: "On the growth and form of the gut"
+  author: Thierry Savin, et al.
+  journal: Nature
+  description: This paper describes how the chicken gut gets its characteristic folding
+  year: 2011
+  link: "http://www.rpdata.caltech.edu/courses/course_papers/Nature_Savin_2011.pdf"
+
+
 # - title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
 #   author: Jeremy Gunawardena
 #   journal: BMC Biology
