upload active matter papers

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -77,6 +77,17 @@
   year: 2016
   link: "https://elifesciences.org/articles/17210"
 
+- title: "Physical limits to magnetogenetics"
+  author: Ha Youn Lee and Mehran Kardar
+  journal: Physical Review E
+  year: 2001
+  link: "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.64.056113"
+
+- title: "Physical limits to magnetogenetics"
+  author: Julia M Yeomans
+  journal: ArXiv
+  year: 2016
+  link: "https://arxiv.org/abs/1603.00194"
 
 # - title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
 #   author: Jeremy Gunawardena
