add are theoretical results results

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -89,6 +89,12 @@
   year: 2016
   link: "https://arxiv.org/abs/1603.00194"
 
+- title: "Are theoretical results 'Results'?"
+  author: Raymond E Goldstein
+  journal: eLife
+  year: 2018
+  link: "https://elifesciences.org/articles/40018"
+
 # - title: "Models in Biology: Accurate Descriptions of Our Pathetic Thinking"
 #   author: Jeremy Gunawardena
 #   journal: BMC Biology
