fix typos on titles

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -4,7 +4,7 @@
   description: The bio numbers website is a portal into biological numeracy.  Many of the key numbers of biology can be found here
   link: "https://bionumbers.hms.harvard.edu/search.aspx"
 
-- title: "The biomass distribution on Earth"
+- title: "The Biomass Distribution on Earth"
   author: Yinon M. Bar-On, Rob Phillips, and Ron Milo
   journal: PNAS
   year: 2018
@@ -65,7 +65,7 @@
   year: 2011
   link: "http://www.rpdata.caltech.edu/courses/course_papers/Nature_Savin_2011.pdf"
 
-- title: "The starring messenger"
+- title: "The starry messenger"
   author: Galileo Galilei
   year: 1610
   link: "https://people.rit.edu/wlrgsh/Galileo.pdf"
@@ -77,13 +77,13 @@
   year: 2016
   link: "https://elifesciences.org/articles/17210"
 
-- title: "Physical limits to magnetogenetics"
+- title: "Macroscopic equations for pattern formation in mixtures of microtubules and molecular motors"
   author: Ha Youn Lee and Mehran Kardar
   journal: Physical Review E
   year: 2001
   link: "https://journals.aps.org/pre/abstract/10.1103/PhysRevE.64.056113"
 
-- title: "Physical limits to magnetogenetics"
+- title: "The Hydrodynamics of Active Systems"
   author: Julia M Yeomans
   journal: ArXiv
   year: 2016
